@@ -207,4 +207,12 @@ sub _exceptionsRules
     return \@rules;
 }
 
+# we stop captiveportal to avoid race condition with not-yet added captive
+# portal rules
+sub beforeFwRestart
+{
+    my ($self) = @_;
+    $self->{captiveportal}->stopService();
+}
+
 1;
