@@ -1,6 +1,8 @@
 HEAD
+	+ Added beforeFwRestart method to firewall helper
 	+ Fixed crash when editing view in Summarized Report
 	+ Added EBox::Iptables::executeModuleRules to be able to execute
+	  rules from a given module calling this new method
 3.2.2
 	+ Removed code made dead by new managament of DHCP nameservers
 3.2.1
